# apertium-cux

./: .gitignore  Makefile.am  README.md  apertium-cux.cux.lexc  apertium-cux.cux.rlx  apertium-cux.cux.spellrelax  apertium-cux.cux.tagged  apertium-cux.cux.twol  apertium-cux.cux.udx  apertium-cux.pc.in  configure.ac  cux.prob  modes.xml
corpora/: ejemplos.conllu
corpora/alimg/: .alimg.py.swp  alimg-02.conllu  alimg.conllu  alimg.py  alimg.tsv
corpora/archive/: ejemplos.tsv  sents.txt  sketch.tsv
corpora/authors/: README.md  corrections.tsv  extract-sents.sh  format-sents.py  lexicon.tsv  lilia.tsv  lucy.tsv  mazali.tsv  paula.tsv  sents-to-conllu.py  sorted_lexicon.tsv
corpora/gina/: gina.conllu  gina.py  gina.tsv
corpora/tagger/: corrections.tsv  lexicon.tsv  tagger.py  verbs.tsv
